--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   google_sign_in: ^4.4.4
   rflutter_alert: ^1.0.3
   image_picker: ^0.6.5+2
+#  flutter_sms: ^2.0.1+2
+  firebase_dynamic_links: ^0.5.0+11
+#  share: ^0.6.4
 
 dev_dependencies:
   flutter_test:
