--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
 #  flutter_sms: ^2.0.1+2
   firebase_dynamic_links: ^0.5.0+11
 #  share: ^0.6.4
+  cloud_firestore: ^0.13.5
+
 
 dev_dependencies:
   flutter_test:
