--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,8 +20,7 @@ def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
-apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
+
 apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
@@ -34,7 +33,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.ghosh.dummy_account"
+        applicationId "com.ghosh.dummyaccount"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
@@ -52,10 +51,4 @@ android {
 
 flutter {
     source '../..'
-}
-
-dependencies {
-    // add SDKs for desired Firebase products
-    // https://firebase.google.com/docs/android/setup#available-libraries
-    implementation 'com.google.firebase:firebase-core:16.0.1'
 }
