--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = dummy_account
+PRODUCT_NAME = dummyaccount
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.ghosh.dummyAccount
+PRODUCT_BUNDLE_IDENTIFIER = com.ghosh.dummyaccount
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2020 com.ghosh. All rights reserved.
